--- a/game.html
+++ b/game.html
@@ -9,7 +9,8 @@
         <title>Quick quiz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="game.css">
     </head>
     <body>
         <!--[if lt IE 7]>
